# HawkeyePlayer

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  EyeFFmpeg.cpp  EyeFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  marco.h  native-lib.cpp  safe_queue.h
app/src/main/cpp/include/libavcodec/: avcodec.h  jni.h
app/src/main/cpp/include/libavutil/: common.h  error.h  ffversion.h
app/src/main/java/com/albert/hawkeyeplayer/: MainActivity.java
app/src/main/java/com/albert/hawkeyeplayer/View/: EyePlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/albert/hawkeyeplayer/: MainActivityTest.groovy
gradle/wrapper/: gradle-wrapper.properties
